Fix z-index

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -52,7 +52,6 @@
     position: absolute;
     top: -1rem;
     right: -1rem;
-    z-index: 10;
 
     background-color: var(--color-secondary);
     border-radius: 50%;
